@@ -10,8 +10,7 @@ import javax.jdo.Query;
 
 import org.springframework.stereotype.Component;
 
-import com.cm.contentmanager.application.Application;
-import com.cm.contentmanager.content.Content;
+import com.cm.util.Anglicizer;
 import com.cm.util.PMF;
 
 @Component
@@ -28,10 +27,16 @@ public class ContentGroupDao {
 			try {
 				pm = PMF.get().getPersistenceManager();
 				Query q = pm.newQuery(ContentGroup.class);
-				q.setFilter("deleted == deletedParam");
-				q.declareParameters("Boolean deletedParam");
-				q.setOrdering("timeUpdatedMs desc");
-				return (List<ContentGroup>) q.execute(new Boolean(false));
+				
+				q.setFilter("nameIdx >= nameParam1 && nameIdx < nameParam2 && deleted == deletedParam");
+				q.declareParameters("String nameParam1, String nameParam2, Boolean deletedParam");
+				q.setOrdering("nameIdx, timeUpdatedMs desc");
+				String lNameParam1 = Anglicizer.anglicize(searchTerm.trim());
+				Object[] _array = new Object[3];
+				_array[0] = lNameParam1;
+				_array[1] = lNameParam1 + "\ufffd";
+				_array[2] = Boolean.valueOf(false);
+				return (List<ContentGroup>) q.executeWithArray(_array);
 			} finally {
 				if (pm != null) {
 					pm.close();
@@ -52,11 +57,16 @@ public class ContentGroupDao {
 			try {
 				pm = PMF.get().getPersistenceManager();
 				Query q = pm.newQuery(ContentGroup.class);
-				q.setFilter("accountId == accountIdParam && deleted == deletedParam");
-				q.declareParameters("Long accountIdParam, Boolean deletedParam");
-				q.setOrdering("userId desc, timeUpdatedMs desc");
-				return (List<ContentGroup>) q.execute(accountId, new Boolean(
-						false));
+				q.setFilter("accountId == accountIdParam && nameIdx >= nameParam1 && nameIdx < nameParam2 && deleted == deletedParam");
+				q.declareParameters("Long accountIdParam, String nameParam1, String nameParam2, Boolean deletedParam");
+				q.setOrdering("nameIdx, timeUpdatedMs desc");
+				String lNameParam1 = Anglicizer.anglicize(searchTerm.trim());
+				Object[] _array = new Object[4];
+				_array[0] = accountId;
+				_array[1] = lNameParam1;
+				_array[2] = lNameParam1 + "\ufffd";
+				_array[3] = Boolean.valueOf(false);
+				return (List<ContentGroup>) q.executeWithArray(_array);
 			} finally {
 				if (pm != null) {
 					pm.close();
@@ -77,11 +87,16 @@ public class ContentGroupDao {
 			try {
 				pm = PMF.get().getPersistenceManager();
 				Query q = pm.newQuery(ContentGroup.class);
-				q.setFilter("userId == userIdParam && deleted == deletedParam");
-				q.declareParameters("Long userIdParam, Boolean deletedParam");
-				q.setOrdering("timeUpdatedMs desc");
-				return (List<ContentGroup>) q
-						.execute(userId, new Boolean(false));
+				q.setFilter("userId == userIdParam && nameIdx >= nameParam1 && nameIdx < nameParam2 && deleted == deletedParam");
+				q.declareParameters("Long userIdParam, String nameParam1, String nameParam2, Boolean deletedParam");
+				q.setOrdering("nameIdx, timeUpdatedMs desc");
+				String lNameParam1 = Anglicizer.anglicize(searchTerm.trim());
+				Object[] _array = new Object[4];
+				_array[0] = userId;
+				_array[1] = lNameParam1;
+				_array[2] = lNameParam1 + "\ufffd";
+				_array[3] = Boolean.valueOf(false);
+				return (List<ContentGroup>) q.executeWithArray(_array);
 			} finally {
 				if (pm != null) {
 					pm.close();
@@ -99,6 +114,7 @@ public class ContentGroupDao {
 			PersistenceManager pm = null;
 			try {
 				pm = PMF.get().getPersistenceManager();
+				contentGroup.setNameIdx(contentGroup.getName().toLowerCase());
 				return pm.makePersistent(contentGroup);
 
 			} finally {
@@ -250,6 +266,7 @@ public class ContentGroupDao {
 				// do not update applicationId
 				_contentGroup.setDescription(contentGroup.getDescription());
 				_contentGroup.setName(contentGroup.getName());
+				_contentGroup.setNameIdx(contentGroup.getName().toLowerCase());
 				_contentGroup.setStartDateIso8601(contentGroup
 						.getStartDateIso8601());
 				_contentGroup.setEndDateIso8601(contentGroup
